--- a/templates/base.html
+++ b/templates/base.html
@@ -1,22 +1,70 @@
 {% load staticfiles %}
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <title>{% block title %}{% endblock title %}Site Name</title>
+<head>
+    <meta charset="utf-8">
+    <title>{% block title %}{% endblock title %}</title>
 
-        <meta http-equiv="X-UA-Compatible" content="chrome=IE7" />
+    <meta http-equiv="X-UA-Compatible" content="chrome=IE7"/>
 
-        <meta name="viewport" content="initial-scale=1.0, width=device-width"/>
-        <meta name="apple-mobile-web-app-capable" content="yes"/>
-        <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+    <meta name="viewport" content="initial-scale=1.0, width=device-width"/>
+    <meta name="apple-mobile-web-app-capable" content="yes"/>
+    <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
 
-        <link rel="stylesheet" href="{% static 'css/screen.css' %}" media="screen, projection"/>
+    <link rel="stylesheet" href="{% static 'css/screen.css' %}"
+          media="screen, projection"/>
 
-        {% block extra_head %}{% endblock extra_head %}
+    {% block extra_head %}{% endblock extra_head %}
 
-    </head>
-    <body id="{% block body_id %}{% endblock %}" class="{% block body_class %}{% endblock %}">
-        {% block content %}{% endblock content %}
-    </body>
+</head>
+<body id="{% block body_id %}{% endblock %}"
+      class="{% block body_class %}{% endblock %}">
+<!-- Start Container -->
+<div class="container">
+
+    <!-- Start Header -->
+    <div class="row" id="header">
+        <div class="col-xs-8">
+            <h1>42 Coffe Cups Test Assignment</h1>
+        </div>
+    </div>
+    <!-- End Header -->
+
+    <!-- Start subheader -->
+    <div class="row" id="sub-header">
+        <div class="col-xs-12">
+            <ul class="nav nav-tabs" role="tablist">
+                <li role="presentation" {% url 'contact' as the_url %}
+                    {% if request.path == the_url %}class="active"{% endif %}>
+                    <a href="{% url "contact" %}">Personal Data </a></li>
+                <li role="presentation" {% url 'requests' as the_url %}
+                    {% if request.path == the_url %}class="active"{% endif %}>
+                    <a href="{% url "requests" %}">Requests</a></li>
+            </ul>
+        </div>
+    </div>
+    <!-- End subheader -->
+
+    <!-- Start Content -->
+    <div class="row" id="content-columns">
+        <div class="col-xs-12" id="content-column">
+            {% block content %}{% endblock content %}
+        </div>
+    </div>
+    <!-- End Content -->
+
+    <!-- Start Footer -->
+    <div class="row" id="footer">
+        <div class="col-xs-12">
+            &copy; 2015 Forty Two Cups of Coffe
+        </div>
+    </div>
+    <!-- End Footer -->
+
+</div>
+<!-- End Container -->
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+<script src="https://cdn.jsdelivr.net/bootstrap/3.3.0/js/bootstrap.min.js"></script>
+
+</body>
 </html>
