--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
         <meta name="apple-mobile-web-app-status-bar-style" content="black" />
 
         <link rel="stylesheet" href="{% static 'css/screen.css' %}" media="screen, projection"/>
-
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         {% block extra_head %}{% endblock extra_head %}
 
     </head>
