ticket:1 Add 2  new tests. Changed 'bio' and 'other' fields on textarea , multiline. Delete noqa and comments.

--- a/apps/hello/templates/contact_data.html
+++ b/apps/hello/templates/contact_data.html
@@ -13,25 +13,33 @@
             <div class="col-md-12"><h3>42 Coffee Cups Test Assignment</h3></div>
         </div>
         </br>
-        <div class="row">
-        <div class="col-md-6">
-            <div><span id="first_name">{{ contact.name }}</span></div>
-            <div><span id="last_name">{{ contact.surname }}</span></div>
-            <div><span id="birth_date">{{ contact.birth_date|date:"Y-m-d" }}</span></div>
-            <div><b>Bio: </b><br><span id="bio">{{ contact.bio }}</span></div>
-        </div>
-        <div class="col-md-6">
-            <div><b>Contacts</b></div>
-            <div><b>Email: </b><span
-                    id="email">{{ contact.email }}</span></div>
-            <div><b>Jabber: </b><span
-                    id="jabber">{{ contact.jabber }}</span></div>
-            <div><b>Skype: </b><span
-                    id="skype">{{ contact.skype }}</span></div>
-            <div><b>Other contacts: </b><br><span
-                    id="other">{{ contact.other }}</span>
+        {% if contact %}
+            <div class="row">
+                <div class="col-md-6">
+                    <div><span id="first_name">{{ contact.name }}</span></div>
+                    <div><span id="last_name">{{ contact.surname }}</span></div>
+                    <div><span
+                            id="birth_date">{{ contact.birth_date|date:"Y-m-d" }}</span>
+                    </div>
+                    <div><b>Bio: </b><br><span
+                            id="bio">{{ contact.bio|linebreaks }}</span></div>
+                </div>
+                <div class="col-md-6">
+                    <div><b>Contacts</b></div>
+                    <div><b>Email: </b><span
+                            id="email">{{ contact.email }}</span></div>
+                    <div><b>Jabber: </b><span
+                            id="jabber">{{ contact.jabber }}</span></div>
+                    <div><b>Skype: </b><span
+                            id="skype">{{ contact.skype }}</span></div>
+                    <div><b>Other contacts: </b><br><span
+                            id="other">{{ contact.other|linebreaks }}</span>
+                    </div>
+                </div>
             </div>
-        </div>
-        </div>
+        {% else %}
+            <div><h5>Contacts Missing</h5></div>
+        {% endif %}
     </div>
+
 {% endblock content %}
