tiket 3: Changing title on N requests.

--- a/apps/hello/templates/contact_data.html
+++ b/apps/hello/templates/contact_data.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}42ccTest{% endblock title %}
+{% block title %}Contacts{% endblock title %}
 
 {% block extra_head %}
     <link rel="stylesheet"
