--- a/apps/hello/templates/requests.html
+++ b/apps/hello/templates/requests.html
@@ -1,12 +1,13 @@
 {% extends 'base.html' %}
 {% load staticfiles %}
 
-{% block title %}42ccTest{% endblock title %}
+{% block title %}Requests{% endblock title %}
+
 
 {% block extra_head %}
     <link rel="stylesheet"
           href="https://cdn.jsdelivr.net/bootstrap/3.3.0/css/bootstrap.min.css">
-    <script src="{% static "js/main.js" %}"></script>
+    <script src="{% static "js/requests.js" %}"></script>
 {% endblock extra_head %}
 
 {% block content %}
@@ -21,6 +22,7 @@
         <tbody>
         {% for req in request_log %}
             <tr>
+                <td id="request-id">{{ req.id }}</td>
                 <td>{{ req.method }}</td>
                 <td>{{ req.path }}</td>
                 <td>{{ req.time }}</td>
