--- a/apps/hello/templates/contact_data.html
+++ b/apps/hello/templates/contact_data.html
@@ -10,7 +10,8 @@
 {% block content %}
     <div class="container">
         <div class="row">
-            <div class="col-md-12"><h3>42 Coffee Cups Test Assignment</h3></div>
+            <div class="col-md-6"><h3>42 Coffee Cups Test Assignment</h3></div>
+            <div class="col-md-6" id='login'><a href="{% url 'contact' %}">Login</a></div>
         </div>
         </br>
         {% if contact %}
@@ -18,11 +19,9 @@
                 <div class="col-md-6">
                     <div><span id="first_name">{{ contact.name }}</span></div>
                     <div><span id="last_name">{{ contact.surname }}</span></div>
-                    <div><span
-                            id="birth_date">{{ contact.birth_date|date:"Y-m-d" }}</span>
+                    <div><span id="birth_date">{{ contact.birth_date|date:"Y-m-d" }}</span>
                     </div>
-                    <div><b>Bio: </b><br><span
-                            id="bio">{{ contact.bio|linebreaks }}</span></div>
+                    <div><b>Photo: </b><br><span id="bio"></span></div>
                 </div>
                 <div class="col-md-6">
                     <div><b>Contacts</b></div>
@@ -34,12 +33,19 @@
                             id="skype">{{ contact.skype }}</span></div>
                     <div><b>Other contacts: </b><br><span
                             id="other">{{ contact.other|linebreaks }}</span>
+                    <div><b>Bio: </b><br><span
+                            id="bio">{{ contact.bio|linebreaks }}</span></div>
                     </div>
                 </div>
             </div>
         {% else %}
             <div><h5>Contacts Missing</h5></div>
         {% endif %}
+        <hr>
+        <div class="row">
+            <div class="col-md-6"><a href="{% url 'requests' %}">requests</a></div>
+        </div>
     </div>
+
 
 {% endblock content %}
