tiket 5: Indicate loading state. Disable form during submit, so nothing could be entered/changed there

--- a/apps/hello/templates/edit_form.html
+++ b/apps/hello/templates/edit_form.html
@@ -51,6 +51,9 @@
                 </div>
             </div>
             <div class="row">
+                 <div id="loading" style="display:none;">
+                    <span>loading...</span>
+                </div>
                 <div id="success" style="display:none;">
                     <span>Changes have been saved.</span>
                 </div>
