--- a/apps/hello/templates/contact_data.html
+++ b/apps/hello/templates/contact_data.html
@@ -11,8 +11,11 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6"><h3>42 Coffee Cups Test Assignment</h3></div>
+            {% if not user.is_authentication %}
             <div class="col-md-6" id='login'><a
-                    href="{% url 'contact' %}">Login</a></div>
+                    href="{% url 'login' %}">Login</a>
+            </div>
+            {% endif %}
         </div>
         </br>
         {% if contact %}
