--- a/apps/hello/templates/contact_data.html
+++ b/apps/hello/templates/contact_data.html
@@ -11,10 +11,14 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6"><h3>42 Coffee Cups Test Assignment</h3></div>
-            {% if not user.is_authentication %}
-            <div class="col-md-6" id='login'><a
-                    href="{% url 'login' %}">Login</a>
-            </div>
+            {% if user.is_authenticated %}
+                <div class="col-md-6" id='registration'><a
+                        href="{% url 'logout' %}">logout</a>
+                </div>
+            {% else %}
+                <div class="col-md-6" id='registration'><a
+                        href="{% url 'login' %}">login</a>
+                </div>
             {% endif %}
         </div>
         </br>
@@ -28,7 +32,8 @@
                     </div>
                     <div><b>Photo: </b><br>
                         {% if contact.photo %}
-                            <img src="{{ MEDIA_URL }}{{ contact.photo }}" width="200" height="200" />
+                            <img src="{{ MEDIA_URL }}{{ contact.photo }}"
+                                 width="200" height="200"/>
                         {% endif %}</div>
                 </div>
                 <div class="col-md-6">
