--- a/apps/hello/templates/registration/login.html
+++ b/apps/hello/templates/registration/login.html
@@ -8,16 +8,20 @@
 {% endblock extra_head %}
 
 {% block content %}
-  <div class="wrapper col-md-3">
-    <form action="." method="post" class="form-signin">{% csrf_token %}
-      <h2 class="form-signin-heading">Please login</h2>
-        {% if form.errors %}
-            <div>Login Name and/or Password Not Recognized</div>
-        {% endif %}
-      <input type="text" class="form-control" name="username" placeholder="Login Name" required="" autofocus="" />
-      <input type="password" class="form-control" name="password" placeholder="Password" required=""/>
-      <button class="btn btn-lg btn-primary btn-block" type="submit">Login</button>
-    </form>
-  </div>
+    <div class="wrapper col-xs-3">
+        <form action="." method="post" class="form-signin">{% csrf_token %}
+            <h2 class="form-signin-heading">Please login</h2>
+            {% if form.errors %}
+                <div>Login Name and/or Password Not Recognized</div>
+            {% endif %}
+            <input type="text" class="form-control" name="username"
+                   placeholder="Login Name" required="" autofocus=""/>
+            <input type="password" class="form-control" name="password"
+                   placeholder="Password" required=""/>
+            <button class="btn btn-lg btn-primary btn-block" type="submit">
+                Login
+            </button>
+        </form>
+    </div>
 
 {% endblock content %}
