task 3: Add link to requests.

--- a/apps/hello/templates/contact_data.html
+++ b/apps/hello/templates/contact_data.html
@@ -40,6 +40,11 @@
         {% else %}
             <div><h5>Contacts Missing</h5></div>
         {% endif %}
+        <hr>
+        <div class="row">
+            <div class="col-md-6"><a href="{% url 'requests' %}">requests</a>
+            </div>
+        </div>
     </div>
 
 {% endblock content %}
