--- a/apps/hello/templates/contact_data.html
+++ b/apps/hello/templates/contact_data.html
@@ -12,8 +12,9 @@
         <div class="row">
             <div class="col-md-6"><h3>42 Coffee Cups Test Assignment</h3></div>
             {% if user.is_authenticated %}
-                <div class="col-md-6" id='registration'><a
-                        href="{% url 'logout' %}">logout</a>
+                <div class="col-md-6" id='registration'>
+                    <a href="{% url 'edit_form' contact.id %}">Edit</a> |
+                    <a href="{% url 'logout' %}">logout</a>
                 </div>
             {% else %}
                 <div class="col-md-6" id='registration'><a
