--- a/apps/hello/templates/registration/login.html
+++ b/apps/hello/templates/registration/login.html
@@ -8,12 +8,10 @@
 {% endblock extra_head %}
 
 {% block content %}
-    <div class="wrapper col-xs-3">
+    <div class="wrapper col-md-4">
         <form action="." method="post" class="form-signin">{% csrf_token %}
             <h2 class="form-signin-heading">Please login</h2>
-            {% if form.errors %}
-                <div>Login Name and/or Password Not Recognized</div>
-            {% endif %}
+            {{ form.non_field_errors }}
             <input type="text" class="form-control" name="username"
                    placeholder="Login Name" required="" autofocus=""/>
             <input type="password" class="form-control" name="password"
