ticket 5: Added  frame. Changed urls.py. Created test_links on the contact page.

--- a/apps/hello/templates/contact_data.html
+++ b/apps/hello/templates/contact_data.html
@@ -35,6 +35,12 @@
                         {% if contact.photo %}
                             <img src="{{ MEDIA_URL }}{{ contact.photo }}"
                                  width="200" height="200"/>
+                        {% else %}
+                            <table width='200px' border="2" height="200px">
+                                <tr align="right" valign="top">
+                                    <td></td>
+                                </tr>
+                            </table>
                         {% endif %}</div>
                 </div>
                 <div class="col-md-6">
