--- a/apps/hello/templates/contact_data.html
+++ b/apps/hello/templates/contact_data.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load edit_link %}
 
 {% block title %}Contacts{% endblock title %}
 
@@ -13,7 +14,8 @@
             <div class="col-md-6"><h3>42 Coffee Cups Test Assignment</h3></div>
             {% if user.is_authenticated %}
                 <div class="col-md-6" id='registration'>
-                    <a href="{% url 'edit_form' contact.id %}">Edit</a> |
+                    <a href="{% url 'edit_form' contact.id %}">Edit</a>
+                    <a href="{% edit_link contact %}">(admin)</a>|
                     <a href="{% url 'logout' %}">logout</a>
                 </div>
             {% else %}
