--- a/apps/hello/templates/contact_data.html
+++ b/apps/hello/templates/contact_data.html
@@ -11,7 +11,7 @@
 {% block content %}
     <div class="container">
         <div class="row">
-            <div class="col-md-6"><h3>42 Coffee Cups Test Assignment{{ SETTINGS. }}</h3></div>
+            <div class="col-md-6"><h3>42 Coffee Cups Test Assignment</h3></div>
             {% if user.is_authenticated %}
                 <div class="col-md-6" id='registration'>
                     <a href="{% url 'edit_form' contact.id %}">Edit</a>
