--- a/apps/hello/templates/requests.html
+++ b/apps/hello/templates/requests.html
@@ -18,13 +18,19 @@
         <table class="table table-hover table-striped" id="req-table">
             <thead>
             <tr>
-                <th>10 Last Requests</th>
+                <th>ID</th>
+                <th><a href="{% url 'requests' %}?order_by=priority{% if request_log.GET.reverse != '1' %}&amp;reverse=1{% endif %}">Priority &uarr;&darr;</a></th>
+                <th>Method</th>
+                <th>Path</th>
+                <th>Time</th>
+                <th>Address</th>
             </tr>
             </thead>
             <tbody>
             {% for req in request_log %}
                 <tr>
                     <td id="request-id">{{ req.id }}</td>
+                    <td>{{ req.priority }}</td>
                     <td>{{ req.method }}</td>
                     <td>{{ req.path }}</td>
                     <td>{{ req.time }}</td>
