--- a/apps/hello/templates/contact_data.html
+++ b/apps/hello/templates/contact_data.html
@@ -36,7 +36,7 @@
                             <img class="image"
                                  src='{{ MEDIA_URL }}{{ contact.photo }}'
                                  height="200" width="200"
-                                 onerror="this.onerror=null;this.src='{{ MEDIA_URL }}/images/does_not_exist.png';">
+                                 onerror="this.onerror=null;this.src='{{ STATIC_URL }}images/does_not_exist.png';">
                         {% else %}
                             <table width='200px' border="2" height="200px">
                                 <tr align="right" valign="top">
