--- a/apps/hello/templates/contact_data.html
+++ b/apps/hello/templates/contact_data.html
@@ -14,8 +14,9 @@
             <div class="col-md-6"><h3>42 Coffee Cups Test Assignment</h3></div>
             {% if user.is_authenticated %}
                 <div class="col-md-6" id='registration'>
+                    <a href="{% url 'add_team' %}">Add team</a> |
                     <a href="{% url 'edit_form' contact.id %}">Edit</a>
-                    <a href="{% edit_link contact %}">(admin)</a>|
+                    <a href="{% edit_link contact %}">(admin)</a> |
                     <a href="{% url 'logout' %}">logout</a>
                 </div>
             {% else %}
@@ -32,6 +33,11 @@
                     <div><span id="last_name">{{ contact.surname }}</span></div>
                     <div><span
                             id="birth_date">{{ contact.birth_date|date:"Y-m-d" }}</span>
+                    <div><b>Teams: </b><span id="contact_team">
+                        {% for team in contact.contact_team.all %}
+                        {{ team }}{% if not forloop.last %},{% else %}. {% endif %}
+                        {% endfor %}
+                    </span></div>
                     </div>
                     <div><b>Photo: </b><br>
                         {% if contact.photo %}
