--- a/apps/hello/templates/edit_form.html
+++ b/apps/hello/templates/edit_form.html
@@ -43,6 +43,17 @@
                         <div class="col-xs-5"><p>{{ form.birth_date }}<p></div>
                     </div>
                     </p>
+
+                    <p>
+
+                    <div class="row" align="right">
+                        <div class="col-xs-3"><label
+                                for="id_contact_team">Team:</label></div>
+                        <div class="col-xs-5">
+                            <p>{{ form.contact_team }}
+                            <p></div>
+                    </div>
+                    </p>
                 </div>
                 <div class="col-md-6">
                     <p>
